--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -62,6 +62,24 @@ body {
 		width: auto;
 		margin: 50px 10px 90px;
 	}
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        border-radius: 6px 6px 0 0;
+        height: 100px;
+        background: $light-gray-color;
+        left: 0;
+        right: 0;
+        display: block;
+        z-index: 0;
+    }
+
+    > div {
+        z-index: 99;
+        position: relative;
+    }
 }
 
 .well {
