--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -61,7 +61,7 @@
                     
                     > li {
                         a {
-                            padding: 8px 10px;
+                            padding: 8px 15px 8px 10px;
                             font-weight: 400;
                             color: $subtext-color;
 
@@ -143,7 +143,7 @@
     left: 0;
     right: 0;
     background: lighten($navbar-color, 5%);
-    z-index: 99;
+    z-index: 999;
     top: 44px;
     padding: 20px 30px 25px;
     display: none;
