Support a 500 error with an invalid species pair
Fixes #1061

In the future we may want to support using a 404 but that appears
non-trivial with the go library we're using

--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% if not tree.has_itree_code %}
+{% if invalid_eco_pair %}
 <div>
   {% blocktrans %}
   <p>Ecosystem benefits cannot be calculated for this species of tree in this location.
