--- a/opentreemap/treemap/css/sass/partials/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/_registration.scss
@@ -48,6 +48,14 @@
     border-radius: 3px;
 }
 
+label[for="id_allow_email_contact"] {
+    float: right;
+    width: 95%;
+}
+#id_allow_email_contact {
+    float: left;
+}
+
 @media (max-width: 767px) {
     .login-signup-panel {
         width: auto;
