--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -274,6 +274,9 @@
       var updateEcoUrl = U.appendSegmentToUrl('eco', updateUrl);
       var updateSidebarUrl = U.appendSegmentToUrl('sidebar', updateUrl);
 
+      var currentPlotUrl = "{% url 'plot_detail' instance_url_name=request.instance.url_name plot_id=plot.pk %}";
+      var plotDetailUrl = U.removeLastUrlSegment(currentPlotUrl);
+
       plot.init({
           config: config,
           startInEditMode: {% if editmode %}true{% else %}false{% endif %},
@@ -285,6 +288,8 @@
           deleteConfirmationBox: '#delete-confirmation-box',
           ecoBenefits: '#ecobenefits',
           updateSidebarUrl: updateSidebarUrl,
+          plotDetailUrl: plotDetailUrl,
+          plotId: {{ plot.id }},
           sidebar: '#sidebar',
           inlineEditForm: {
               updateUrl: updateUrl,
