Use "mapfeature" as the model for geom searches

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -103,7 +103,7 @@
     <div class="search-field-group">
       <a class="typeahead-toggle" id="boundary-toggle"><i class="icon-menu"></i></a>
       <input type="text" data-class="search" id="boundary-typeahead" placeholder="Address, City, State"/>
-      <input name="plot.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
+      <input name="mapfeature.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
     </div>
   </div>
 </div> <!-- end search block wrapper -->
