Fix ecobenefits on two lines spacing problem

--- a/opentreemap/treemap/css/sass/partials/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/_sidebar.scss
@@ -193,8 +193,9 @@
             font-weight: 400;
             font-size: 1.8rem;
             float: left;
-            margin: 0;
-            line-height: 3.2rem;
+            margin: 0 0 10px;
+            line-height: 2.4rem;
+            width: 260px;
             color: $primary-color;
         }
         .benefit-content {
