Add styling to plot_details.html

--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -82,6 +82,12 @@ body {
     }
 }
 
+.alert {
+    .btn {
+        margin-bottom: 5px;
+    }
+}
+
 .well {
 	border: 1px solid lighten($well-color, 10%);
 	background: $light-gray-color;
