--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -68,7 +68,7 @@ body {
         position: absolute;
         top: 0;
         border-radius: 6px 6px 0 0;
-        height: 100px;
+        height: 110px;
         background: $light-gray-color;
         left: 0;
         right: 0;
@@ -88,6 +88,14 @@ body {
     }
 }
 
+.progress {
+    margin-bottom: 8px;
+
+    .bar {
+        background: $secondary-color;
+    }
+}
+
 .well {
 	border: 1px solid lighten($well-color, 10%);
 	background: $light-gray-color;
@@ -97,7 +105,7 @@ body {
 		margin-bottom: 0;
 	}
 
-	h3 {
+	h4 {
 		color: $secondary-color;
 		font-size: 1.6rem;
 		font-weight: 400;
@@ -106,11 +114,14 @@ body {
 	}
 	h5 {
 		margin-bottom: 6px;
+        color: $secondary-color;
+		font-size: 1.4rem;
+		font-weight: 700;
 	}
 	p, li {
 		font-size: 1.4rem;
 		font-weight: 300;
-		line-height: 2.4rem;
+		line-height: 2.1rem;
 	}
     p {
         clear: both;
