Style commenting on detail pages

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -13,6 +13,7 @@
 // -- Page Specific
 @import "partials/map";
 @import "partials/sidebar";
+@import "partials/comments";
 @import "partials/calculator";
 @import "partials/treedetails";
 @import "partials/registration";
