Update styling from MikeT's prototypes
This round just applies style changes to things we've already implemented
* user profile page
* plot detail page
* tweak to instance_base

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -33,7 +33,7 @@
 {% endif %}
 {% if request.instance|feature_enabled:'recent_edits_report' %}
 <li class="{% block activerecentedits %}{% endblock %}">
-  <a href="{% url 'edits' instance_url_name=request.instance.url_name %}">{% trans "Edits" %}</a>
+  <a href="{% url 'edits' instance_url_name=request.instance.url_name %}">{% trans "View Edits" %}</a>
 </li>
 {% endif %}
 {% endblock instancetopnav %}
