--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -8,7 +8,7 @@
   {% endblocktrans %}
 </div>
 {% elif benefits %}
-<table class="table table-striped">
+<table class="table">
   <tbody>
     {% for benefit in benefits %}
     <tr>
