DRY user edit form processing
Public fields, private fields, and permissible edit fields are now built dynamically from the same place instead of duplicated. This commit also adds support for configuring which template to use, which will be necessary for upcoming additions.

--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -52,12 +52,12 @@ active
       <div id="upload-photo-error" class="text-error" style="display: none"></div>
       {% endusercontent %}
       <form id="user-form">
-        {% for label, identifier in public_fields %}
-          {% field label from identifier withtemplate "treemap/field/div.html" %}
+        {% for label, identifier, template in public_fields %}
+          {% field label from identifier withtemplate template %}
         {% endfor %}
         {% usercontent for user %}
-        {% for label, identifier in private_fields %}
-          {% field label from identifier withtemplate "treemap/field/div.html" %}
+        {% for label, identifier, template in private_fields %}
+          {% field label from identifier withtemplate template %}
         {% endfor %}
         <label>{% trans "Email Updates" %}</label>
         <div class="field-view">{% trans "Not Subscribed" %}</div>
