Simplify template by removing underused blocks

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -22,7 +22,8 @@
         <form id="add-tree-form" onsubmit="return false;">
           {# The "add-tree-species" label is used as an id prefix in "species_ul.html" #}
           {% create "add-tree-species" from "tree.species" in request.instance withtemplate "treemap/field/species_div.html" %}
-          {% create "add-tree-diameter" from "tree.diameter" in request.instance withtemplate "treemap/field/diameter_div.html" %}
+          {% trans "Trunk Diameter" as diameter %}
+          {% create diameter from "tree.diameter" in request.instance withtemplate "treemap/field/diameter_div.html" %}
 
           {% for label, identifier in fields_for_add_tree %}
               {% create label from identifier in request.instance withtemplate "treemap/field/div.html" %}
