--- a/opentreemap/treemap/templates/treemap/partials/plot_popup.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_popup.html
@@ -2,24 +2,21 @@
 {% load instance_config %}
 
 <div>
-    {% if plot.current_tree and plot.current_tree.species %}
-        <h4>{{ plot.current_tree.species }}</h4>
-    {% else %}
-        <h4>{% trans "Missing Species" %}</h4>
-    {% endif %}
-
+    <h4>{{ title }}</h4>
     <address>
         <strong>{% trans "Nearby Address:" %}</strong>
-        {{ plot.address_full }}
+        {{ feature.address_full }}
     </address>
 </div>
 <div>
-    <a href="{% url 'plot_detail' instance_url_name=request.instance.url_name feature_id=plot.pk %}"
+    <a href="{% url 'plot_detail' instance_url_name=request.instance.url_name feature_id=feature.pk %}"
        class="btn btn-small btn-secondary">{% trans "View All Details" %}</a>
 
-    <a disabled="disabled"
-       data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
-       data-disabled-title="{% trans "Editing a tree's details is not available to all users" %}"
-       data-href="{% url 'plot_detail_edit' instance_url_name=request.instance.url_name feature_id=plot.pk edit='edit' %}"
-       class="btn btn-small btn-info">{% trans "Edit Details" %}</a>
+    {% if feature.is_plot %}
+        <a disabled="disabled"
+           data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
+           data-disabled-title="{% trans "Editing a tree's details is not available to all users" %}"
+           data-href="{% url 'plot_detail_edit' instance_url_name=request.instance.url_name feature_id=feature.pk edit='edit' %}"
+           class="btn btn-small btn-info">{% trans "Edit Details" %}</a>
+    {% endif %}
 </div>
