--- a/opentreemap/treemap/css/sass/partials/_profile.scss
+++ b/opentreemap/treemap/css/sass/partials/_profile.scss
@@ -113,6 +113,7 @@
                     font-weight: 400;
                     font-size: 2.4rem;
                     margin: 3px 0;
+                    min-height: 20px;
                 }
             }
         }
