--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -74,7 +74,7 @@ active
         <div class="span9">
             <div class="profile-tabs">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#edits" data-toggle="tab"><span class="number">{{ total_count }}</span> Edits</a></li>
+                    <li class="hidden"><a href="#edits" data-toggle="tab"><span class="number">{{ total_count }}</span> Edits</a></li>
                     <li class="hidden"><a href="#maps" data-toggle="tab"><span class="number">3</span> Tree Maps</a></li>
                     <li class="hidden"><a href="#faves" data-toggle="tab"><span class="number">86</span> Favorites</a></li>
                 </ul>
