Update URLs and views
* Convert more "plot" URLs to "feature" URLs, and "plot" views to "map_feature" views
* Make "tree detail" URL redirect to "plot detail"
* render_map_feature_detail() chooses template based on map feature type

--- a/opentreemap/treemap/templates/treemap/partials/sidebar.html
+++ b/opentreemap/treemap/templates/treemap/partials/sidebar.html
@@ -37,7 +37,7 @@
   {% if nearby %}
   </ul>
   {% for plot in nearby %}
-  <li><a href="{% url 'plot_detail' instance_url_name=request.instance.url_name feature_id=plot.pk %}">{{ plot.pk }}</a></li>
+  <li><a href="{% url 'map_feature_detail' instance_url_name=request.instance.url_name feature_id=plot.pk %}">{{ plot.pk }}</a></li>
   {% endfor %}
   </ul>
   {% else %}
