Include eco benefit detail in API responses
I needed two additional pieces of information to allow the iOS
application to correctly display eco benefits on a plot detail view.

1. The instance details need to declare the eco fields that can be
   displayed.

2. The plot details need to include the configured currency symbol in
   the formatted amount saved field. This keeps all the currency
   formatting on the server side.

Adding the currency symbol to the formatted result required updating the
app templates so that they did not end up displaying the currency symbol twice.

--- a/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
@@ -19,7 +19,7 @@
         <dt>{{ benefit.value }}</dt>
         <dd>{{ benefit.unit }}</dd>
         {% if benefit.currency_saved %}
-          <dt>{{ currency_symbol }}{{ benefit.currency_saved }}</dt>
+          <dt>{{ benefit.currency_saved }}</dt>
           <dd>
             {% comment %}Translators: Money saved{% endcomment %}
             {% trans "saved" %}
