--- a/opentreemap/treemap/templates/treemap/partials/plot_eco.html
+++ b/opentreemap/treemap/templates/treemap/partials/plot_eco.html
@@ -14,7 +14,7 @@
     <tr>
       <td>{{ benefit.label }}</td>
       <td>{{ benefit.value }} {{ benefit.unit}}</td>
-      <td>{{ currency_symbol }}{{ benefit.currency_saved }}</td>
+      <td>{{ benefit.currency_saved }}</td>
     </tr>
     {% endfor %}
   </tbody>
