--- a/opentreemap/treemap/templates/treemap/recent_user_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_user_edits.html
@@ -18,19 +18,15 @@
             <td>{{ audit.model|display_name }}</td>
             <td>{{ audit.field_display_name }}</td>
 
+            <td>
             {% if audit.field == 'plot' %}
-            <td>
-                Plot {{ audit.clean_current_value }}
-            </td>
+                Planting Site {{ audit.clean_current_value }}
             {% elif audit.field == 'species' %}
-            <td>
                 {{ audit.clean_current_value.display_name }}
-            </td>
             {% else %}
-            <td>
                 {{ audit.current_display_value|default_if_none:"" }}
-            </td>
             {% endif %}
+            </td>
 
             <td>{{ audit.created }}</td>
         </tr>
