--- a/opentreemap/treemap/templates/treemap/field/species_div.html
+++ b/opentreemap/treemap/templates/treemap/field/species_div.html
@@ -12,7 +12,7 @@
   <div style="display: none;" data-class="edit" data-field="{{ field.identifier }}">
     <label>{% trans "Species" %}</li>
     <div>
-      {% include "treemap/field/typeahead.html" %}
+      {% include "treemap/field/species_typeahead.html" %}
     </div>
     <div class="alert alert-error text-error"
         style="display: none;"
