--- a/opentreemap/treemap/templates/treemap/field/species_tr.html
+++ b/opentreemap/treemap/templates/treemap/field/species_tr.html
@@ -18,7 +18,7 @@
       data-class="edit">
     <td>{% trans "Species" %}</td>
     <td>
-      {% include "treemap/field/typeahead.html" %}
+      {% include "treemap/field/species_typeahead.html" %}
     </td>
     <td class="text-error"
         style="display: none;"
