Update text content
fixes #1099 on github.

--- a/opentreemap/treemap/templates/treemap/field/species_typeahead.html
+++ b/opentreemap/treemap/templates/treemap/field/species_typeahead.html
@@ -6,6 +6,7 @@
 <input type="text"
        data-typeahead-input="{{ field.identifier }}"
        id="{{ field.label }}-typeahead"
+       placeholder="Common or scientific name"
        value="{{ field.value.display_name }}"/>
 <input type="hidden"
        value="{{ field.value.id }}"
