Upgrade to typeahead.js 0.10.1.  Closes #120
This brings a few niceties:

We can access the typeahead datums directly, instead of getting
them through an undocumented .data() object

The option to tokenize client-side instead of server-side

The ability to sort suggestion results

--- a/opentreemap/treemap/css/sass/partials/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/_map.scss
@@ -166,7 +166,7 @@ span.tt-dropdown-menu {
             padding: 8px 10px;
             border-bottom: 1px solid $light-gray-color;
 
-            &.tt-is-under-cursor,
+            &.tt-cursor,
             &:hover {
                 background-color: $light-gray-color;
             }
