--- a/opentreemap/treemap/css/sass/partials/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/_map.scss
@@ -19,7 +19,7 @@
     left: 0;
     background: $well-color;
     position: absolute;
-    bottom: 40px;
+    bottom: 0;
     top: 0;
     right: 350px;
 }
