--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -15,7 +15,7 @@
 {% include "treemap/partials/upload_image.html" with panel_id="add-photo-modal" title="Add a Photo" endpoint=upload_tree_photo_url %}
 
 <div class="image-background"></div>
-<div class="container contained tree-details">
+<div class="container contained topper tree-details">
   <div class="row-fluid">
     <div class="span3">
 {% if feature.is_plot %}
