--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -30,7 +30,7 @@ active
 {% include "treemap/partials/upload_image.html" with panel_id="set-photo-modal" title="Set a Photo" endpoint=photo_url %}
 <div class="image-background"></div>
 
-<div class="container contained profile">
+<div class="container contained topper profile">
     <div class="row-fluid">
         <div class="span3">
             <div class="account-info">
