--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -34,11 +34,10 @@ body {
 	&.map {
 		position: absolute;
 		overflow: hidden;
-		padding-bottom: 40px;
-		margin-bottom: 0;
+		margin: 0;
 		top: 203px;
 		width: 100%;
-		bottom: 0;
+		bottom: 40px;
 	}
 }
 
@@ -63,7 +62,7 @@ body {
 		margin: 50px 10px 90px;
 	}
 
-    &:before {
+    &.topper:before {
         content: '';
         position: absolute;
         top: 0;
