Fix text and styling on diameter calculator.
Fixes #872

--- a/opentreemap/treemap/css/sass/partials/_calculator.scss
+++ b/opentreemap/treemap/css/sass/partials/_calculator.scss
@@ -20,21 +20,23 @@
     }
     tr {
         td {
-            &:first-child,
-            &:nth-child(2n){
-                width: 45%;
-            }
-            &:last-child {
-                width: 10%;
-            }
-
-            input {
-                width: 56%;
-            }
+            width: 50%;
         }
     }
     input {
         margin: 0;
+    }
+}
+
+#sidebar-add-tree {
+    #diameter-calculator {
+        tr {
+            td {
+                input {
+                    max-width: 78px;
+                }
+            }
+        }
     }
 }
 
