--- a/opentreemap/treemap/css/sass/partials/_header.scss
+++ b/opentreemap/treemap/css/sass/partials/_header.scss
@@ -158,6 +158,7 @@
     border-left: 8px solid $primary-color;
     border-top: 1px solid lighten($primary-color, 35%);
     font-size: 1.6rem;
+    font-weight: 300;
     background: lighten($primary-color, 45%);
     height: 24px;
     position: relative;
