Support for static page creation
* Add helpers to StaticPage model and use them in existing view
* "field" template tag uses new data_type "long_string" for "TextField" fields; templates render it as &lt;textarea&gt;
* When inlineEditForm.js moves a field value to a display value, use text() instead of html() so HTML characters will be escaped

--- a/opentreemap/treemap/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/_admin.scss
@@ -76,6 +76,11 @@
         width: 80%;
     }
 
+    textarea {
+        width: 80%;
+        height: 20em;
+    }
+
     .messages,
     .text-error {
         &:empty {
