Fix spacing above diameter calculator
There is an input which stores the "computed" diameter.
The input and unit label were hidden, but not their container,
which caused spacing issues above the diameter calculator.

--- a/opentreemap/treemap/templates/treemap/field/diameter_div.html
+++ b/opentreemap/treemap/templates/treemap/field/diameter_div.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 
 {% block inputs %}
-  {% include "treemap/field/inputs.html" with extra='style="display:none"' unit_extra='style="display:none"' %}
+  <div style="display: none;">
+    {% include "treemap/field/inputs.html" %}
+  </div>
   {% include "treemap/partials/diameter_calculator.html" %}
 {% endblock inputs %}
