Allow for any number of static pages

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -144,15 +144,14 @@
   <ul class="inline pull-left">
     {% with linkData=request.instance|instance_config:"linkData" %}
     <li><a target="_blank" href="{% if 'treekey' in linkData.keys and linkData.treekey %}{{ linkData.treekey }}{% else %}http://www.arborday.org/trees/whatTree/{% endif %}">{% trans "Tree Key" %}</a></li>
-    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page='Resources' %}">{% trans "Resources" %}</a></li>
-    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page='FAQ' %}">{% trans "FAQ" %}</a></li>
-    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page='About' %}">{% trans "About" %}</a></li>
+    {% for staticpage in request.instance.static_pages %}
+    <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page=staticpage.name %}">{{ staticpage.name }}</a></li>
+    {% endfor %}
     {% if 'contact' in linkData.keys and linkData.contact %}
-    <li><a href="mailto:{{ linkData.contact }}">{% trans "Contact" %}</a></li>
     {% endif %}
     {% endwith %}
   </ul>
-  <a href="{% url 'static_page' instance_url_name=request.instance.url_name page='Partners' %}" class="pull-right partners">{% trans "Partners" %}</a>
+  <a href="mailto:{{ linkData.contact }}" class="pull-right partners">{% trans "Contact" %}</a>
 </div>
 {% endblock footer %}
 
