Setup and restructure advanced search, style it up

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -7,7 +7,7 @@
 @import "partials/layout";
 @import "partials/navbar";
 @import "partials/header";
-@import "partials/advancedsearch";
+@import "partials/subheader";
 @import "partials/footer";
 @import "partials/error";
 
